kubernetes/applications/node-red/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: node-red
  labels:
    # Expose node-red service via Cilium/BGP-announced LoadBalancer
    bgp.cilium.io/ip-pool: default
    bgp.cilium.io/advertise-service: default

spec:
  selector:
    app.kubernetes.io/name: node-red
  type: LoadBalancer
  ports:
    - name: http
      port: 1880
      targetPort: http
      protocol: TCP
